tests/valid_programs/hello_world4.duck
use std::{io};
use std::io::{println};

fn main() {
    io::println("with io");
    println("with println");
}
