tests/invalid_programs/types/mismatched_primitive_type.duck
fn x(y: String) {
}

fn main() {
    x(5);
}
